--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,7 +6,7 @@
 
 <h1> 회원 관리 시스템 </h1>
 
-<a href='select.php'> (1) 회원 조회 (조회 후 수정/삭제 가능) </a> <br><br>
+<a href='select.php'> (1) 조회 (조회 후 수정/삭제 가능) </a> <br><br>
 <a href='insert.php'> (2) 신규 회원 등록 </a> <br><br>
 <FORM METHOD="get"  ACTION="update.php">
 	(3) 회원 수정 - 회원 아이디 : <INPUT TYPE ="text" NAME="userID"> 
